<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">LevelUp</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appsflyer_dev_key">nVTuQk8wpqNsTaTv8tkiCK</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">b84d6c31-e1d0-4267-ae6d-485847079994</string>
    <string name="com_appboy_api_key">05775807-afa8-4ba2-91b0-24384cd51f71</string>
    <string name="com_appboy_feed_connection_error_body">"Cannot establish network connection.
Please try again later."</string>
    <string name="com_appboy_feed_connection_error_title">Connection Error</string>
    <string name="com_appboy_feed_empty">"We have no updates.
Please check again later."</string>
    <string name="com_appboy_feedback_form_cancel">Cancel</string>
    <string name="com_appboy_feedback_form_email">Email</string>
    <string name="com_appboy_feedback_form_empty_email">An email address is required.</string>
    <string name="com_appboy_feedback_form_invalid_email">Invalid Email Address</string>
    <string name="com_appboy_feedback_form_invalid_message">Please enter a feedback message.</string>
    <string name="com_appboy_feedback_form_is_bug">Reporting an Issue?</string>
    <string name="com_appboy_feedback_form_message">Message</string>
    <string name="com_appboy_feedback_form_send">Send</string>
    <string name="com_appboy_image_resize_tag_key">com_appboy_image_resize_tag_key</string>
    <string name="com_appboy_notification_time_twelve_hour_format">h:mm a</string>
    <string name="com_appboy_notification_time_twenty_four_hour_format">HH:mm</string>
    <string name="com_appboy_push_gcm_sender_id">@string/levelup_gcm_sender_id</string>
    <string name="com_appboy_recommendation_free">Free</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="levelup_activity_about">com.scvngr.levelup.ui.activity.AboutLevelUpActivity</string>
    <string name="levelup_activity_attributions">com.scvngr.levelup.ui.activity.AttributionsActivity</string>
    <string name="levelup_activity_edit_color">com.scvngr.levelup.ui.activity.ColorSettingActivity</string>
    <string name="levelup_activity_home_screen">com.scvngr.levelup.ui.activity.HomeActivity</string>
    <string name="levelup_activity_how_it_works">com.scvngr.levelup.ui.activity.HowItWorksActivity</string>
    <string name="levelup_activity_logout">com.scvngr.levelup.ui.activity.LogoutActivity</string>
    <string name="levelup_activity_refer_a_friend">com.scvngr.levelup.ui.activity.ReferAFriendActivity</string>
    <string name="levelup_activity_scan">com.scvngr.levelup.ui.activity.ScanActivity</string>
    <string name="levelup_activity_support">com.scvngr.levelup.ui.activity.SupportTicketActivity</string>
    <string name="levelup_activity_transaction_history">com.scvngr.levelup.ui.activity.TransactionHistoryActivity</string>
    <string name="levelup_activity_user_profile">com.scvngr.levelup.ui.activity.UserProfileActivity</string>
    <string name="levelup_keypad_key_backspace_description">backspace</string>
    <string name="levelup_lock_key_0">0</string>
    <string name="levelup_lock_key_1">1</string>
    <string name="levelup_lock_key_2">2</string>
    <string name="levelup_lock_key_3">3</string>
    <string name="levelup_lock_key_4">4</string>
    <string name="levelup_lock_key_5">5</string>
    <string name="levelup_lock_key_6">6</string>
    <string name="levelup_lock_key_7">7</string>
    <string name="levelup_lock_key_8">8</string>
    <string name="levelup_lock_key_9">9</string>
    <string name="levelup_navigation_label_attributions">Attributions</string>
    <string name="levelup_navigation_label_feedback">Report an Issue or Get a Refund</string>
    <string name="levelup_navigation_label_logout">Log Out</string>
    <string name="levelup_navigation_label_pay">Pay</string>
    <string name="levelup_navigation_label_profile">Account Info</string>
    <string name="levelup_navigation_label_refer_a_friend">Invite Your Friends</string>
    <string name="levelup_navigation_label_scan">Scan</string>
    <string name="levelup_navigation_label_terms_and_conditions">Legal</string>
    <string name="levelup_navigation_label_transaction_history">Transaction History</string>
    <string name="levelup_navigation_section_one_title">Main</string>
    <string name="levelup_navigation_section_three_title">Security &amp; Help</string>
    <string name="levelup_navigation_section_two_title">Account</string>
    <string name="levelup_registration_interstitial_body">Create an account to get personalized food recommendations and rewards</string>
    <string name="levelup_registration_interstitial_email_button">Continue with Email</string>
    <string name="levelup_registration_interstitial_facebook_button">Continue with Facebook</string>
    <string name="levelup_registration_interstitial_title">Welcome to LevelUp</string>
    <string name="levelup_registration_interstitial_tutorial_button">Learn How</string>
    <string name="levelup_registration_interstitial_tutorial_title">Curious how LevelUp works?</string>
    <string name="levelup_rewards_feed_info_body1">No more searching for those loyalty cards</string>
    <string name="levelup_rewards_feed_info_body2">Every visit, item, or dollar spent automagically earns you progress towards unlocking a reward. Once you’ve unlocked a reward, it will show up under your ‘Available Rewards’</string>
    <string name="levelup_rewards_feed_info_body3">You’ve unlocked a reward! To use a reward, simple just place an order. Rewards will be automagically applied during checkout — winning!</string>
    <string name="levelup_rewards_feed_info_body4">support@thelevelup.com</string>
    <string name="levelup_rewards_feed_info_header1">Collect and redeem rewards automagically</string>
    <string name="levelup_rewards_feed_info_header2">Rewards Progress</string>
    <string name="levelup_rewards_feed_info_header3">Available Rewards</string>
    <string name="levelup_rewards_feed_info_header4">Questions? We’re always here to help!</string>
    <string name="levelup_setting_log_out">Log Out</string>
    <string name="levelup_setting_rate_title">Rate Us on Google Play</string>
    <string name="levelup_url_legal">https://www.thelevelup.com/legal</string>
    <string name="levelup_visit_based_loyalty_step_1_description">Earn 2 blue pips and you get a first level reward!</string>
    <string name="levelup_visit_based_loyalty_step_1_title">Green Reward</string>
    <string name="levelup_visit_based_loyalty_step_2_description">Earn 5 blue pips and you get a second level reward!</string>
    <string name="levelup_visit_based_loyalty_step_2_title">Orange Reward</string>
    <string name="levelup_visit_based_loyalty_step_3_description">Earn 7 blue pips and you get a third level reward!</string>
    <string name="levelup_visit_based_loyalty_step_3_title">Red Reward</string>
    <string name="levelup_visit_based_loyalty_step_4_description">Earn 10 blue pips and you get a fourth level reward!!</string>
    <string name="levelup_visit_based_loyalty_step_4_title">Yellow Reward</string>
    <string name="levelup_visit_based_loyalty_steps_footer">Once you get four rewards, your pips start back at 0 and you get to do it all again!</string>
    <string name="levelup_visit_based_loyalty_steps_header">Every time you come in and spend $X or more, you earn a pip!</string>
    <string name="settings_about_levelup">About LevelUp</string>
    <string name="settings_additional_settings">Additional Settings</string>
    <string name="settings_app_version">App Version</string>
    <string name="settings_choose_color">Choose Your Scan Color</string>
    <string name="settings_how_it_works_title">How LevelUp Works</string>
</resources>