<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/levelup_frame"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:showDividers="middle">
            <fragment android:tag="com.scvngr.levelup.ui.fragment.UserProfileHeaderFragment" android:layout_width="fill_parent" android:layout_height="wrap_content" class="com.scvngr.levelup.ui.fragment.UserProfileHeaderFragment" />
            <fragment android:tag="com.scvngr.levelup.ui.fragment.navigation.NavigationListPaymentMethodFragment" android:layout_width="fill_parent" android:layout_height="wrap_content" class="com.scvngr.levelup.ui.fragment.navigation.NavigationListPaymentMethodFragment" />
            <com.scvngr.levelup.ui.view.navigation.ActivityStartView android:id="@id/levelup_navigation_transaction_history" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_navigation_label_transaction_history" android:drawableLeft="@drawable/levelup_transaction_history" android:drawableRight="@drawable/ic_keyboard_arrow_right" app:destination="@string/levelup_activity_transaction_history" app:divider="@color/levelup_settings_divider" style="@style/profile_navigation" />
            <com.scvngr.levelup.ui.view.navigation.ActivityStartView android:id="@id/preference_choose_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_choose_color" android:drawableLeft="@drawable/levelup_scanner_angled_small" android:drawableRight="@drawable/ic_keyboard_arrow_right" app:destination="@string/levelup_activity_edit_color" style="@style/profile_navigation" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_additional_settings" style="@style/settings_list_separator" />
            <com.scvngr.levelup.ui.view.navigation.ActivityStartView android:id="@id/preference_how_it_works" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_how_it_works_title" android:drawableLeft="@drawable/levelup_how_it_works" android:drawableRight="@drawable/ic_keyboard_arrow_right" app:destination="@string/levelup_activity_how_it_works" app:divider="@color/levelup_settings_divider" style="@style/profile_navigation" />
            <com.scvngr.levelup.ui.view.navigation.ActivityStartView android:id="@id/levelup_navigation_support" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_navigation_label_feedback" android:drawableLeft="@drawable/levelup_contact_support" android:drawableRight="@drawable/ic_keyboard_arrow_right" app:destination="@string/levelup_activity_support" app:divider="@color/levelup_settings_divider" style="@style/profile_navigation" />
            <com.scvngr.levelup.ui.view.navigation.ActivityStartView android:id="@id/levelup_about" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_about_levelup" android:drawableLeft="@drawable/levelup_about_us" android:drawableRight="@drawable/ic_keyboard_arrow_right" app:destination="@string/levelup_activity_about" app:divider="@color/levelup_settings_divider" style="@style/profile_navigation" />
            <com.scvngr.levelup.ui.view.navigation.ActivityStartView android:id="@id/levelup_navigation_log_out" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_setting_log_out" android:drawableLeft="@drawable/levelup_log_out" android:drawableRight="@drawable/ic_keyboard_arrow_right" app:destination="@string/levelup_activity_logout" style="@style/profile_navigation" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>