<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/levelup_padding_outer" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_steps_header" style="@style/levelup_visit_based_loyalty_header" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/levelup_visit_based_loyalty_step_list">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/levelup_visit_based_loyalty_step">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_step_1_title" style="@style/levelup_visit_based_loyalty_step_title" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_step_1_description" style="@style/levelup_visit_based_loyalty_step_description" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/levelup_visit_based_loyalty_step">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_step_2_title" style="@style/levelup_visit_based_loyalty_step_title" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_step_2_description" style="@style/levelup_visit_based_loyalty_step_description" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/levelup_visit_based_loyalty_step">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_step_3_title" style="@style/levelup_visit_based_loyalty_step_title" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_step_3_description" style="@style/levelup_visit_based_loyalty_step_description" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/levelup_visit_based_loyalty_step">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_step_4_title" style="@style/levelup_visit_based_loyalty_step_title" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_step_4_description" style="@style/levelup_visit_based_loyalty_step_description" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/levelup_visit_based_loyalty_steps_footer" style="@style/levelup_visit_based_loyalty_footer" />
    </LinearLayout>
</ScrollView>